--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <title>Nijin</title>
 </head>
@@ -23,28 +24,28 @@
      
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
-                <a href="#">UI UX Works <img src="Icon.svg"></a>
+                <a href="#">UI UX Works <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
-                <a href="#">Poster Designs <img src="Icon.svg"></a>
+                <a href="#">Poster Designs <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
-                <a href="#">My Thoughts <img src="Icon.svg"></a>
+                <a href="#">My Thoughts <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
-                <a href="#">Resume <img src="Icon.svg"></a>
+                <a href="#">Resume <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
-                <a href="#">Instagram <img src="Icon.svg"></a>
+                <a href="#">Instagram <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
-                <a href="#">LinkedIn <img src="Icon.svg"></a>
+                <a href="#">LinkedIn <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
-                <a href="mailto:someone@example.com">Email <img src="Icon.svg"></a>
+                <a href="mailto:someone@example.com">Email <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
-                <a href="#">Contact <img src="Icon.svg"></a>
+                <a href="#">Contact <i class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
