--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <br>
      
-        <div class="row">
+        <div class="row links">
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
                 <a href="#">UI UX Works <i class="fa-solid fa-arrow-right"></i></a>
             </div>
