--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
         <br>
      
         <div class="row links">
-            <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                 <a href="#">UI UX Works <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                 <a href="#">Poster Designs <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                 <a href="#">My Thoughts <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                 <a href="#">Resume <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                 <a href="#">Instagram <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                 <a href="#">LinkedIn <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                 <a href="mailto:someone@example.com">Email <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                 <a href="#">Contact <i class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
