--- a/index.html
+++ b/index.html
@@ -13,38 +13,37 @@
 
 <body>
     <div class="container">
-    
         <div>
-            <p><span>Nijin</span> is a <span>UI UX Designer</span> who loves creating things that look good and work well.</p>
-            <p>He's currently a UI UX Designer at <span><a class="work" href="#">Qmark Technolabs</a></span>. Previously, he was a designer at <span><a class="work" href="#">Moonley Interactive</a></span>
+            <p id="fade-in"><span><b>Nijin</b></span> is a <span><b>UI UX Designer</b></span> who loves creating things that look good and work well.</p>
+            <p id="fade-in">He's currently a UI UX Designer at <span><a class="work" href="#">Qmark Technolabs</a></span>. Previously, he was a designer at <span><a class="work" href="#">Moonley Interactive</a></span>
                 & <span><a class="work" href="#">RITS</a></span>.</p>
-            <p>He received a Bachelor of Science in Computer Science after studying at <span><a class="work" href="#">Farook College, India</a></span>.</p>
+            <p id="fade-in">He received a Bachelor of Science in Computer Science after studying at <span><a class="work" href="#">Farook College, India</a></span>.</p>
         </div>
         <br>
-     
+
         <div class="row links">
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
+            <div id="fade-in" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3">
                 <a href="#">UI UX Works <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
+            <div id="fade-in" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3">
                 <a href="#">Poster Designs <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
+            <div id="fade-in" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3">
                 <a href="#">My Thoughts <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
+            <div id="fade-in" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3">
                 <a href="#">Resume <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
+            <div id="fade-in" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3">
                 <a href="#">Instagram <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
+            <div id="fade-in" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3">
                 <a href="#">LinkedIn <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
+            <div id="fade-in" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3">
                 <a href="mailto:someone@example.com">Email <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
+            <div id="fade-in" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3">
                 <a href="#">Contact <i class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
